--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-calendar": "^3.5.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "react-calendar": "^3.5.0",
+    "react-use-precision-timer": "^3.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
