--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
@@ -12,10 +14,10 @@
     "react-bootstrap": "^2.1.2",
     "react-calendar": "^3.5.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-use-precision-timer": "^3.3.1",
-    "react-redux": "^7.2.8",
     "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
