--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.1.2",
     "react-calendar": "^3.5.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
